<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright © 2020  Hethsron Jedaël BOUEYA
    *
    * This program is free software; you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation; either version 2 of the License, or
    * (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    *
    * You should have received a copy of the GNU General Public License
    * along with this program; if not, write to the Free Software
    * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-->
<layout>
    <data>
        <variable
            name="feed"
            type="fr.ensisa.boueya.hethsron.lectorem.ui.model.Feed" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.middleware.AddFeedFragment">

        <!-- Add Feed fragment relative Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_ftb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/ocean_blue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- Add Feed fragment relative Toolbar -->

        <!-- Add Feed fragment relative CoordinatorLayout -->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_ftb">

            <!-- Add Feed fragment relative ConstraintLayout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/user_title"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="147dp"
                    android:layout_marginEnd="21dp"
                    android:ems="10"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_custom_title"
                    android:drawableTint="@color/ocean_blue"
                    android:drawablePadding="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:hint="@string/title"
                    android:text="@{feed.title}"
                    android:autofillHints="@string/title"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/user_description"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="21dp"
                    android:ems="10"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_custom_description"
                    android:drawableTint="@color/ocean_blue"
                    android:drawablePadding="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:hint="@string/description"
                    android:text="@{feed.description}"
                    android:autofillHints="@string/description"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_title" />

                <EditText
                    android:id="@+id/user_link"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="21dp"
                    android:ems="10"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_custom_link"
                    android:drawableTint="@color/ocean_blue"
                    android:drawablePadding="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:hint="@string/link"
                    android:text="@{feed.url}"
                    android:autofillHints="@string/link"
                    android:inputType="textUri"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_description" />

                <NumberPicker
                    android:id="@+id/user_priority"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="147dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="147dp"
                    android:value="@{feed.priority}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_link" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="7dp"
                    android:gravity="center"
                    android:text="@string/priority"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/user_priority"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_link" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Add Feed fragment relative ConstraintLayout -->

            <!-- Home fragment relative Tools FloatingActionButton -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/tool_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/tool"
                android:layout_margin="21dp"
                app:fabSize="normal"
                android:clickable="true"
                android:focusable="true"
                android:tint="@color/white"
                android:src="@drawable/ic_add"
                android:backgroundTint="@color/dark_orange"
                android:elevation="12dp"/>
            <!-- Home fragment relative Tools FloatingActionButton -->

            <!-- Home fragment relative Save FloatingActionButton -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/save"
                android:layout_marginBottom="84dp"
                android:layout_marginEnd="28dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="21dp"
                android:visibility="invisible"
                app:fabSize="mini"
                android:clickable="true"
                android:focusable="true"
                android:tint="@color/white"
                android:src="@drawable/ic_save"
                android:elevation="12dp"/>
            <!-- Home fragment relative Save FloatingActionButton -->

            <!-- Home fragment relative Cancel FloatingActionButton -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/cancel_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/cancel"
                android:layout_marginBottom="28dp"
                android:layout_marginEnd="84dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="21dp"
                android:visibility="invisible"
                app:fabSize="mini"
                android:clickable="true"
                android:focusable="true"
                android:tint="@color/white"
                android:src="@drawable/ic_cancel"
                android:elevation="12dp"/>
            <!-- Home fragment relative Cancel FloatingActionButton -->

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
        <!-- Add Feed fragment relative CoordinatorLayout -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>