<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright © 2020  Hethsron Jedaël BOUEYA
    *
    * This program is free software; you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation; either version 2 of the License, or
    * (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    *
    * You should have received a copy of the GNU General Public License
    * along with this program; if not, write to the Free Software
    * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-->
<!-- Grid Layout CardView definition -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:padding="7dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <!-- Grid Layout CardView composition -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <!-- Grid Layout relative TextView -->
        <TextView
            android:id="@+id/news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@color/royal_blue"
            android:contentDescription="@null"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- Grid Layout relative TextView -->

        <!-- Grid Layout relative TextView -->
        <TextView
            android:id="@+id/news_pubDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="3dp"
            android:background="@color/ocean_blue"
            android:contentDescription="@null"
            android:text="@string/pubDate"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_title" />
        <!-- Grid Layout relative TextView -->

        <!-- Grid Layout relative TextView -->
        <TextView
            android:id="@+id/news_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:contentDescription="@null"
            android:drawableRight="@drawable/ic_book"
            android:drawableTint="@color/dark_orange"
            android:text="@string/description"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_pubDate" />
        <!-- Grid Layout relative TextView -->

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Grid Layout CardView composition -->

</androidx.cardview.widget.CardView>
<!-- Grid Layout CardView definition -->